# arte

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  requirements.txt  typedef.yaml
include/: arte.h
scripts/: __init__.py  demo.py  read_types.py
scripts/transactions/: __init__.py  gen_major_chord.py  gen_major_scale.py  gen_pitch.py  gen_rand.py  gen_time.py
src/: main.cpp
src/modules/: CMakeLists.txt
src/modules/client/: CMakeLists.txt  client.h
src/modules/native/: CMakeLists.txt
src/modules/native/linux/: native.h
src/modules/native/src/: windows.cpp
src/modules/native/windows/: native.h
src/modules/python/: CMakeLists.txt  python.h
src/modules/python/src/: python.cpp
src/modules/server/: CMakeLists.txt  server.h
src/modules/transaction/: CMakeLists.txt  transaction.h
src/modules/transaction/src/: transaction.cpp
src/modules/type/: CMakeLists.txt  type.h
src/modules/type/src/: type.cpp
